--- a/docs/en/releaseNotes/0.6.1.304.md
+++ b/docs/en/releaseNotes/0.6.1.304.md
@@ -11,4 +11,4 @@
 * fix some forum bugs in developer portal
 
 ## Docs Update
-SDK and Layer0 both updated, developers need to download and update their local version, follow the [Setup](../topics/sdk.md) doc.
+SDK and Layer0 both updated, developers need to download and update their local version, follow the [Setup](../tutorials/setup.md) doc.
