[ReleaseNote] update to 329 and add known issue.

--- a/docs/en/releaseNotes/0.6.1.329.md
+++ b/docs/en/releaseNotes/0.6.1.329.md
@@ -1,4 +1,4 @@
-# 0.6.1.304 (2018.1.19)
+# 0.6.1.329 (2018.1.19)
 
 ## Features Update
 * polish the login UI
@@ -12,3 +12,6 @@
 
 ## Docs Update
 SDK and Layer0 both updated, developers need to download and update their local version, follow the [Setup](../tutorials/setup.md) doc.
+
+## Known Issue
+1. Space Shooter can't be launched from console UI, use dev tool (app runner) to launch it instead.
