--- a/docs/en/releaseNotes/0.6.2.807.md
+++ b/docs/en/releaseNotes/0.6.2.807.md
@@ -4,17 +4,17 @@
 * Initial optimization tips and perf guidelines ([doc](../topics/optimization.md))
 
 ## Bug Fixes
-* fix the bug of devtool(layer0 debugger) can't connect to remote machine.
-* fix the bug of devtool(app runner) install will fail when package is too big.
-* fix the bug of devtool(app runner) install app will fail if the package name and app id are not same.
-* fix the bug of can't subscribe to layer0 running on remote machine.
-* fix launching apps from the console UI issue.
+* Fixed the bug that devtool(layer0 debugger) failed to connect to a remote machine.
+* Fixed the bug that devtool(app runner) install failed when package size was too big.
+* Fixed the bug that devtool(app runner) install app failed if the package name and app id did not match.
+* Fixed the bug of failing to subscribe to layer0 when running on a remote machine.
+* Fixed the UI issues when launching apps from the console.
 * Disabled LTCG in C++ RuyiSDK.lib to fix linker error when building UE4 sample ([issue](https://bitbucket.org/playruyi/unreal_demo/issues/1))
 
 ## Updates
-* manifest file format updated, use exePath to specify the executable file for the activity.(manifest -> application -> activity -> exePath). [HowToPack](../tutorials/how_to_pack.md)
-* main client UI polish
-* new [Ruyi OS image](http://dev.playruyi.com/uservices) and BIOS include ([instructions](../topics/bios.md))
+* Manifest file format updated. Use exePath to specify the executable file for the activity.(manifest -> application -> activity -> exePath). [HowToPack](../tutorials/how_to_pack.md)
+* Main client UI polish
+* New [Ruyi OS image](http://dev.playruyi.com/uservices) and BIOS included ([instructions](../topics/bios.md))
 
 ## Known Issues
-* UE4 compling and running?
+* UE4 compling may failed in certain circumstances,still looking into the problem and trying to fix.
