--- a/docs/en/releaseNotes/0.6.2.807.md
+++ b/docs/en/releaseNotes/0.6.2.807.md
@@ -17,4 +17,4 @@
 * New [Ruyi OS image](http://dev.playruyi.com/uservices) and BIOS included ([instructions](../topics/bios.md))
 
 ## Known Issues
-* UE4 compling may failed in certain circumstances,still looking into the problem and trying to fix.
+* UE4 compling may fail in certain circumstances,still looking into the problem and trying to fix.
