--- a/docs/en/releaseNotes/0.6.2.807.md
+++ b/docs/en/releaseNotes/0.6.2.807.md
@@ -1,7 +1,7 @@
 # 0.6.2.807 (2018.2.12)
 
 ## New Features
-* Initial optimization tips and perf guidelines ([doc](../topics/optimization.md))
+* Initial optimization tips and performance guidelines ([doc](../topics/optimization.md))
 
 ## Bug Fixes
 * Fixed the bug that devtool(layer0 debugger) failed to connect to a remote machine.
