--- a/docs/en/releaseNotes/0.6.2.807.md
+++ b/docs/en/releaseNotes/0.6.2.807.md
@@ -18,3 +18,4 @@
 
 ## Known Issues
 * UE4 compiling may fail in certain circumstances, still looking into the problem and trying to fix.
+* Clicking direction keys may incur double clicks when typing on the main client UI.  
