--- a/docs/en/releaseNotes/0.6.2.807.md
+++ b/docs/en/releaseNotes/0.6.2.807.md
@@ -18,4 +18,4 @@
 
 ## Known Issues
 * UE4 compiling may fail in certain circumstances, still looking into the problem and trying to fix.
-* Clicking direction keys may incur double clicks when typing with keyboard on the main client UI.  
+* Clicking direction keys may incur double moves for the cursor when typing with keyboard on the main client UI.  
