--- a/docs/en/releaseNotes/0.7.x.md
+++ b/docs/en/releaseNotes/0.7.x.md
@@ -2,13 +2,22 @@
 
 ## New Features
 * [PC mode](../topics/pc_mode.md)
+* Implement of setting function
+* Version numbers shown in setting
 
 ## Bug Fixes
-* 
+* Fixed Unreal demo compile issue;
+* Fixed main client freeze issue;
+* Fixed user cannot login issue;
+* Trailing slashes confuse AppRunner's pack command ([issue](https://bitbucket.org/playruyi/support/issues/6))
+* Devtools doesn't support non-English/Chinese/Japanese OSes ([issue](https://bitbucket.org/playruyi/unreal_demo/issues/4))* 
 
 ## Updates
+* BIOS v0.13;
+* RuyiOS v0.6;
+* Main Client front end polish;
+* Logout function optimized;
+* API docs layout optimized.
 * 
 
 ## Known Issues
-* Trailing slashes confuse AppRunner's pack command ([issue](https://bitbucket.org/playruyi/support/issues/6))
-* Devtools doesn't support non-English/Chinese/Japanese OSes ([issue](https://bitbucket.org/playruyi/unreal_demo/issues/4))
