minor words changes

--- a/docs/en/releaseNotes/0.7.0.963.md
+++ b/docs/en/releaseNotes/0.7.0.963.md
@@ -24,4 +24,4 @@
 * API docs layout optimized.
 
 ## Known Issues
-* Login with first-time-registered account will fail, it will be resolved by restarting layer0.exe and wpfclient.exe .
+* Login with first-time-registered account will fail, but restart layer0.exe and wpfclient.exe and login for the second time will work.
