Fix-up 0.7.0.963 release notes

--- a/docs/en/releaseNotes/0.7.0.963.md
+++ b/docs/en/releaseNotes/0.7.0.963.md
@@ -2,26 +2,24 @@
 
 ## New Features
 * [PC mode](../topics/pc_mode.md)
-* Implement of setting function
-* Input by keyboard supported
-* Version numbers shown in setting
+* Settings UI
+    * Including BIOS/OS/etc. version numbers
+* Main client keyboard input
 
 ## Bug Fixes
-* Fixed virtual keyboard input error; 
-* Fixed Unreal demo compile issue;
-* Fixed default language issue with dev-tool;
-* Fixed Main Client freeze issue;
-* Fixed registered user login issues;
-* Fixed trailing slash confuses app-runner.
+* Fixed virtual keyboard input error
+* Fixed Unreal demo compile issue
+* Fixed Main Client freeze issue
+* Fixed registered user login issues
+* Fixed trailing slash confuses app-runner ([issue](https://bitbucket.org/playruyi/support/issues/6))
 
 ## Updates
-* BIOS v0.13;
-* RuyiOS v0.6;
-* Implement setting function;
-* Main Client front end polish;
-* Version numbers are shown;
-* Logout function optimized;
-* API docs layout optimized.
+* BIOS v0.13
+* RuyiOS v0.6
+* Main Client front end polish
+* Logout function optimized
+* API docs layout optimized
 
 ## Known Issues
-* Login with first-time-registered account will fail, but restart layer0.exe and wpfclient.exe and login for the second time will work.
+* Newly-registered accounts cannot login.  Restarting layer0.exe and wpfclient.exe and re-attempting login a second time will work. ([issue](https://bitbucket.org/playruyi/support/issues/7))
+* Default language issue with dev-tool ([issue](https://bitbucket.org/playruyi/support/issues/8))
