--- a/docs/en/releaseNotes/0.7.2.1447.md
+++ b/docs/en/releaseNotes/0.7.2.1447.md
@@ -26,7 +26,7 @@
 
 ## SDK Updates
 * Provided CPP SDK lib build with both static and dynamic linkage to the runtime
-* Added Thrift files to SDK details(https://bitbucket.org/playruyi/support/issues/12)
+* Added Thrift files to SDK ([details](https://bitbucket.org/playruyi/support/issues/12))
 
 ## Dev Tools Improvements
 * Text fields for file paths are editable
@@ -41,7 +41,7 @@
     -	JSON parse/validation errors
 
 ## Bug Fixes
-* Disabled the windows update in PC mode to fix the black screen booting issue(https://bitbucket.org/playruyi/support/issues/10/) 
+* Disabled the windows update in PC mode to fix the black screen booting ([issue](https://bitbucket.org/playruyi/support/issues/10/))
 * Fixed the issue that OS restore failed with the second drive installed
 * Fixed a few issues regarding virtual keyboard
     - Pressing LT/RT incurred double moves for the cursor
