Flesh out 0.8.0 release notes.  Building SDK from source also points people at binaries.  Update binary names/paths.

--- a/docs/en/releaseNotes/0.8.0.1717.md
+++ b/docs/en/releaseNotes/0.8.0.1717.md
@@ -1,28 +1,28 @@
 # 0.8.0.1717 (2018.5.18)
 
 ## New Features
-1. Ruyi Assist (PC only)  
-1. MIT license added to sdk_source and docs   
-1. API Tool in devtools to assist processing Thrift message specifications  
+1. Ruyi Assist; system tray utility providing power control and hardware info ([PC mode](../topics/pc_mode.md) only)
+1. MIT license added to [sdk_source](https://bitbucket.org/playruyi/sdk_source) and [docs](https://bitbucket.org/playruyi/docs)
+1. __API Tool__ in devtools to assist processing Thrift message specifications ([details](../topics/build_sdk_source.md#Thrift))
 
 
 ## Updates
-1. RuyiNet moved from Ruyi namespace to Ruyi.SDK.Online   
-1. Simplified steps to build c++ SDK [details](https://bitbucket.org/playruyi/support/issues/15)  
-1. Controller support for Unity demo  
-1. Tooltips for text fields in devtool  
-1. RUYI OS recovery [guide](https://bitbucket.org/playruyi/docs/src/4e2136631baa9ba40027edfd4388912d780fd1c3/docs/en/topics/os_recovery.md?fileviewer=file-view-default)  
+1. __RuyiNet__ moved from `Ruyi` namespace to `Ruyi.SDK.Online`
+    * For example, [RuyiNetClient](https://bitbucket.org/playruyi/sdk_source/src/master/RuyiSDK/RuyiNet/RuyiNetClient.cs)
+1. Simplified steps to build c++ SDK ([details](https://bitbucket.org/playruyi/support/issues/15))
+1. Controller support for [Unity demo](https://bitbucket.org/playruyi/space_shooter)
+1. Tooltips for text fields in devtool
+1. RUYI OS recovery ([details](../topics/os_recovery.md))
 
 
 ## Bug Fixes
-1. Fixed the issue that CDN link expired after 30 minutes [details](https://dev.playruyi.com/forum/topic/11/unable-to-download-os-image)   
+1. Fixed the issue that CDN link expired after 30 minutes ([details](https://dev.playruyi.com/forum/topic/11/))
 1. Fixed an issue that caused integrity check fail during OS recovery   
-1. Fixed an issue that caused fail when trying to run an app from mainclient UI   
-1. Fixed an issue that caused stuck when trying to relog in an user account after logging out  
-
+1. Fixed an issue that caused fail when trying to run an app from mainclient UI
+1. Fixed an issue that caused stuck when trying to relog in an user account after logging out
+1. Unable to detect USB 3.0 devices ([details](https://bitbucket.org/playruyi/support/issues/17))
 
 ## Known Issues
-1. Docs links broken on bitbucket [details](https://bitbucket.org/playruyi/support/issues/16)   
-1. Unable to detect USB 3.0 devices [details](https://bitbucket.org/playruyi/support/issues/17)   
-1. Unable to use DX12 debug layer [details](https://bitbucket.org/playruyi/support/issues/18)
+1. Docs links broken on bitbucket ([details](https://bitbucket.org/playruyi/support/issues/16))
+1. Unable to use DX12 debug layer ([details](https://bitbucket.org/playruyi/support/issues/18))
 1. Layer0 will throw an error at start up
