--- a/docs/en/releaseNotes/0.8.1.2001.md
+++ b/docs/en/releaseNotes/0.8.1.2001.md
@@ -3,8 +3,8 @@
 ## New Features  
 1. Patching manager implemented   
 1. Layer0 runs as a windows service (details)   
-1. New InputManager API   
-
+1. New InputManager API
+1. SDK demos been updated using new InputManager API 
 
 
 ## Updates
@@ -20,9 +20,11 @@
 1. Fixed some typos for OS recovery instructions
 1. Fixed the issue that layer0 failed to recognize controllers if it’s already connected before layer0 was started
 1. Fixed the issue that audio volume setting in main client was not in consistent with the system setting
+1. Fixed switch to low power mode in ruyi assist
 
 
 ## Known Issues
 1. Overlay can not be called in game
 1. You must upgrade BIOS to 1.00 first, then to 1.01
 1. Ruyi Assist doesn't support Chinese
+1. Use bat file on desktop to switch OS, the one in main client won't work
