[Release] update release note.

--- a/docs/en/releaseNotes/0.8.1.2001.md
+++ b/docs/en/releaseNotes/0.8.1.2001.md
@@ -8,9 +8,7 @@
 
 
 ## Updates
-1. AMD drivers updated to 1.0.2.0
 1. EULA added in the registration process
-
 
 
 ## Bug Fixes
@@ -25,6 +23,5 @@
 
 ## Known Issues
 1. Overlay can not be called in game
-1. You must upgrade BIOS to 1.00 first, then to 1.01
 1. Ruyi Assist doesn't support Chinese
-1. Use bat file on desktop to switch OS, the one in main client won't work
+1. Use bat file on desktop to switch OS, the one in main client won't work [download](https://bitbucket.org/playruyi/support/raw/master/files/scripts/SwitchOS.cmd)
