Added links and English fixes for 0.8.1 release notes

--- a/docs/en/releaseNotes/0.8.1.2001.md
+++ b/docs/en/releaseNotes/0.8.1.2001.md
@@ -2,26 +2,32 @@
 
 ## New Features  
 1. Patching manager implemented   
-1. Layer0 runs as a windows service (details)   
+1. Layer0 runs as a Windows service ([details](https://bitbucket.org/playruyi/docs/src/master/docs/en/topics/layer0.md))
 1. New InputManager API
-1. SDK demos been updated using new InputManager API 
+    - SDK demos updated: [UE4](https://bitbucket.org/playruyi/unreal_demo/commits/389ed16f85ff3015178cfbcae690ccce5e90dc72), [Unity](https://bitbucket.org/playruyi/space_shooter/commits/5707546806371d9b2bf4503a2bd9ceb5378cd550)
 
 
 ## Updates
-1. EULA added in the registration process
+1. EULA added to registration process
 
 
 ## Bug Fixes
-1. Fixed an issue that caused an error when pressing button A double times or more to start an app
-1. Fixed the issue that the SDK instance was not released when quitting a game
-1. Fixed the issue that the overlay client was shown at front right after its startup
-1. Fixed some typos for OS recovery instructions
-1. Fixed the issue that layer0 failed to recognize controllers if it’s already connected before layer0 was started
-1. Fixed the issue that audio volume setting in main client was not in consistent with the system setting
-1. Fixed switch to low power mode in ruyi assist
+1. Fixed issue where SDK instance was not released when quitting a game
+1. Fixed some typos in OS recovery instructions
+1. Fixed issue where controllers not detected if already connected before layer0 started
+
+Main Client/Overlay/UI:
+
+1. Fixed an error when pressing button A repeatedly to launch an app
+1. Fixed issue where overlay client was shown at front right after its startup
+1. Fixed issue where audio volume setting in main client was not consistent with the system setting
+1. Fixed switch to low power mode in Ruyi Assist
 
 
 ## Known Issues
-1. Overlay can not be called in game
+1. Overlay can not be called in game (was disabled in this release)
 1. Ruyi Assist doesn't support Chinese
-1. Use bat file on desktop to switch OS, the one in main client won't work [download](https://bitbucket.org/playruyi/support/raw/master/files/scripts/SwitchOS.cmd)
+1. "Switch OS" in main client not working
+    - Use bat file on desktop to switch OS (or [download](https://bitbucket.org/playruyi/support/raw/master/files/scripts/SwitchOS.cmd))
+1. Multiple service failures and main client non-responsive when returning to "high-power mode" ([details](https://bitbucket.org/playruyi/support/issues/20))
+1. Multiple service failures when create new Windows user ([details](https://bitbucket.org/playruyi/support/issues/21))
