--- a/docs/zh-cn/releaseNotes/0.6.1.329.md
+++ b/docs/zh-cn/releaseNotes/0.6.1.329.md
@@ -1,19 +1,19 @@
 # 0.6.1.329 (2018.1.19)
 
-## New Features
-* Polish the login UI
-* Update the App Library
+## 新功能
+* 优化登陆界面
+* 更新APP库
 
-## Bug Fixes
-* Fix the potential crash bug when install an app through devtool
-* Fix the SDK demos don't work properly issue
-* Fix the devtool (localization plugin) doesn't work issue.
-* Fix some forum bugs in developer portal ([forums](http://dev.playruyi.com/forum/))
+## Bug修正
+* 修正从开发者工具安装程序时的潜在崩溃问题
+* 修正SDK示例非正常运行问题
+* 修正开发者工具（localization插件）无法正常运行问题
+* 修正部分开发者平台问题([论坛](http://dev.playruyi.com/forum/))
 
-## Updates
-* Numerous other bug fixes and improvements.
-* Many new pages/corrections/additions to [documentation](https://bitbucket.org/playruyi/docs).
-* Entire SDK updated.  Developers need to download and update their local version (see [updating the SDK](../tutorials/setup.md#updating-sdk))
+## 更新
+* 大量bug修正和改进
+* 大量关于[文档](https://bitbucket.org/playruyi/docs)的新内容/修正/附加内容
+* SDK完整更新。需要开发者更新本地开发套件版本。(请看[更新SDK](../tutorials/setup.md#updating-sdk))
 
-## Known Issues
-1. [Space Shooter](https://bitbucket.org/playruyi/space_shooter) (aka the Unity demo) can't be launched from console UI, use devtool (AppRunner tool) to launch it instead.
+## 已知问题
+1. [Space Shooter](https://bitbucket.org/playruyi/space_shooter) (即Unity示例程序)无法从主机界面启动。可以使用开发者工具(AppRunner插件)启动。
