--- a/docs/zh-cn/releaseNotes/0.7.0.974.md
+++ b/docs/zh-cn/releaseNotes/0.7.0.974.md
@@ -1,25 +1,25 @@
 # 0.7.0.974 (2018.3.9)
 
-## New Features
-* [PC mode](../topics/pc_mode.md)
-* Settings UI
-    * Including BIOS/OS/etc. version numbers
-* Main client keyboard input
+## 新功能
+* [PC模式](../topics/pc_mode.md)
+* 界面设置
+    * 包括BIOS/操作系统/等等 版本号
+* 主机客户端键盘输入
 
-## Bug Fixes
-* Fixed virtual keyboard input error
-* Fixed Unreal demo compile issue
-* Fixed Main Client freeze issue
-* Fixed registered user login issues
-* Fixed trailing slash confuses app-runner ([issue](https://bitbucket.org/playruyi/support/issues/6))
+## Bug修正
+* 修正虚拟键盘输入错误
+* 修正虚幻示例程序编译问题
+* 修正主机客户端死机问题
+* 修正已注册用户的登陆问题
+* 修正app-runner在命令行输入命令时结尾下划线问题 ([问题](https://bitbucket.org/playruyi/support/issues/6))
 
-## Updates
+## 更新
 * BIOS v0.13
-* RuyiOS v0.6
-* Main Client front end polish
-* Logout function optimized
-* API docs layout optimized
+* 如意系统 v0.6
+* 主机客户端前端优化
+* 注销功能优化
+* API文档界面布局优化
 
-## Known Issues
-* Newly-registered accounts cannot login.  Restarting layer0.exe and wpfclient.exe and re-attempting login a second time will work. ([issue](https://bitbucket.org/playruyi/support/issues/7))
-* Default language issue with dev-tool ([issue](https://bitbucket.org/playruyi/support/issues/8))
+## 已知问题
+* 新注册用户的用户无法登陆。需要重新运行layer0.exe和wpfclient.exe，然后再次登陆才会成功([问题](https://bitbucket.org/playruyi/support/issues/7))
+* 开发者工具的默认语言问题([问题](https://bitbucket.org/playruyi/support/issues/8))
