--- a/docs/zh-cn/releaseNotes/0.7.1.1199.md
+++ b/docs/zh-cn/releaseNotes/0.7.1.1199.md
@@ -1,20 +1,20 @@
 # 0.7.1.1199 (2018.3.30)
 
-## New Features
-* Source code for Ruyi SDK ([details](https://bitbucket.org/playruyi/sdk_source))
-* Main UI partial support for mouse input
+## 新功能
+* 添加如意SDK源代码仓库([详细](https://bitbucket.org/playruyi/sdk_source))
+* 主机客户端界面部分支持鼠标输入
 
-## Bug Fixes
-* Fixed the input lag with Xbox One controller
-* Newly-registered accounts cannot login.  Restarting layer0.exe and wpfclient.exe and re-attempting login a second time will work. ([issue](https://bitbucket.org/playruyi/support/issues/7))
-* Trailing slash confuses app-runner ([issue](https://bitbucket.org/playruyi/support/issues/6))
+## Bug修正
+* 修正Xbos One手柄输入延迟问题
+* 修正新注册用户的用户无法登陆。需要重新运行layer0.exe和wpfclient.exe，然后再次登陆才会成功的问题([问题](https://bitbucket.org/playruyi/support/issues/7))
+* 修正app-runner在命令行输入命令时结尾下划线问题。 ([问题](https://bitbucket.org/playruyi/support/issues/6))
 
-## Updates
-* Virtual keyboard optimized
-* Unreal demo updates
-* Dev tools & Layer0 updates
+## 更新
+* 虚拟键盘优化
+* 更新虚幻示例程序
+* 更新开发者工具&Layer0
 
-## Known Issues
+## 已知问题
 
-* Main client will freeze when entering __Settings -> System Update__, then press `A` or `Enter`
+* 在主机客户端进入 __Settings -> System Update__, 然后按'A'或者'Enter'会引起客户端卡死
 
