--- a/docs/zh-cn/releaseNotes/0.7.0.974.md
+++ b/docs/zh-cn/releaseNotes/0.7.0.974.md
@@ -9,7 +9,7 @@
 ## Bug修正
 * 修正虚拟键盘输入错误
 * 修正虚幻示例程序编译问题
-* 修正主机客户端死机问题
+* 修正主机客户端程序卡死问题
 * 修正已注册用户的登陆问题
 * 修正app-runner在命令行输入命令时结尾下划线问题 ([问题](https://bitbucket.org/playruyi/support/issues/6))
 
