--- a/docs/zh-cn/releaseNotes/0.7.2.1447.md
+++ b/docs/zh-cn/releaseNotes/0.7.2.1447.md
@@ -1,54 +1,54 @@
 # 0.7.2.1447 (2018.4.28)
 
-## New Features
-* Settings
-    - Power off function in Settings
-    - Added language change option in Settings
-* New UE4 sample: [Platformer Game](https://bitbucket.org/playruyi/platformer_game)
-* Input
-    - Added mouse support in Main Client
-    - Disabled mouse right-click context menu
-    - Supporting Ruyi controller in [Unreal Demo](https://bitbucket.org/playruyi/unreal_demo) and [Platformer](https://bitbucket.org/playruyi/platformer_game)
+## 新功能
+* 设置
+    - 添加主机开关功能
+    - 添加语言选择功能
+* 添加新虚幻4示例: [Platformer](https://bitbucket.org/playruyi/platformer_game)
+* 输入
+    - 主机客户端添加鼠标输入支持
+    - 上下文菜单中关闭鼠标右击
+    - 在[虚幻示例]和[Platformer](https://bitbucket.org/playruyi/platformer_game)中添加对如意手柄支持(https://bitbucket.org/playruyi/unreal_demo)
 
-## Updates
+## 更新
 * [BIOS v0.19](../topics/bios.md)
-    - Optmized post time, from 18s to 10s
-    - Added Ruyi post logo
-    - Implemented internet recovery function
-    - If using BIOS v0.08 cannot update directly to 0.19.  First update to 0.13 then 0.19.
-* [RuyiOS v0.10](../topics/os.md)
-    - About 5% performance increase (3Dmark) after optimizing BIOS/drivers
-    - Supporting beep API for buzzer control
-    - Improved system Recovery process
-    - Branding in [PC mode](../topics/pc_mode.md), including wallpaper, IE homepage, etc.
-* [Unreal Demo](https://bitbucket.org/playruyi/unreal_demo)
-    - Separate UE4 integration from UE4 demo
-    - Integrate telemetry system into Unreal Demo
+    - 优化启动时间，从18秒到10秒
+    - 添加如意启动标志
+    - 实现网络回复功能
+    - 如果BIOS版本号为v0.08，则无法直接更新值0.19。需要先升级到0.13然后升级至0.19
+* [如意系统 v0.10](../topics/os.md)
+    - 优化BIOS/驱动后由大约5%的性能提升(3Dmark)
+    - 支持对于引起系统警告操作时发出Win警告beep声的API
+    - 改进了系统恢复过程
+    - 在[PC模式]添加商标(../topics/pc_mode.md)，包括墙纸，IE浏览器主页等等。
+* [虚幻示例](https://bitbucket.org/playruyi/unreal_demo)
+    - 将虚幻4的集成从示例程序中分离
+    - 将传导(telemetry)系统集成到虚幻示例中
 
-## SDK Updates
-* Provided CPP SDK lib build with both static and dynamic linkage to the runtime ([SDK download](http://dev.playruyi.com/udownloadslist/SDK))
-* Added [Thrift files](https://bitbucket.org/playruyi/sdk_source/src/development/ThriftFiles/) to [sdk_source repository](https://bitbucket.org/playruyi/sdk_source) ([issue](https://bitbucket.org/playruyi/support/issues/12))
+## SDK更新
+* 提供静态和动态的运行时C++SDK库([SDK下载](http://dev.playruyi.com/udownloadslist/SDK))
+* 添加[Thrift文件](https://bitbucket.org/playruyi/sdk_source/src/development/ThriftFiles/)到[sdk源码仓库](https://bitbucket.org/playruyi/sdk_source)中 ([问题](https://bitbucket.org/playruyi/support/issues/12))
 
-## Dev Tools Improvements
-* Text fields for file paths are editable
-* Triple-click in text field to select all text
-* "Default" project is saved automatically whenever command is run
-* Sensible default values are provided for some fields
-* CLI now supports projects (see `-p` and `--no-default-project` options)
-* Corresponding command line shown for each UI operation
-* Some log output items can be double-clicked for further information
-    - output.xml in TRC tool log
-    - Command line for each UI operation
-    - JSON parse/validation errors
+## 开发者工具改进
+* 可编辑输入框的文件路径
+* 在输入框3击可全选文本
+* 无论命令行界面(cmd)是否运行，"默认"项目会自动保存
+* 部分输入框提供合理的默认值
+* CLI现在支持项目(请看`-p`和`--no-default-project`选项)
+* 每个界面操作会显示对应命令行语句
+* 部分输出日志内容可以双击查看更多信息
+    - TRC工具的output.xml
+    - 每次界面操作的命令行语句
+    - JSON解析/验证错误
 
-## Bug Fixes
-* Disabled Windows Update in [PC mode](../topics/pc_mode.md) to fix the black screen booting ([issue](https://bitbucket.org/playruyi/support/issues/10/))
-* Fixed the issue that OS restore failed with a second drive installed
-* Fixed a few issues regarding virtual keyboard
-    - Pressing LT/RT moves the cursor twice
-    - Unable to use analog stick for navigating on the virtual keyboard
-    - Virtual keyboard was not big enough on the screen
+## Bug修正
+* 修正启动时的黑屏问题([问题](https://bitbucket.org/playruyi/support/issues/10/))，在[PC模式](../topics/pc_mode.md)关闭Windows更新
+* 修正安装第二个硬盘驱动情况下系统恢复失败问题
+* 修正部分和虚拟键盘相关问题
+    - 按下LT/RT光标会移动两次
+    - 无法在虚拟键盘上使用遥感来导航
+    - 虚拟键盘界面相对屏幕过小
 
-## Known Issues
-* Language setting not working in console mode.
-* Cannot update BIOS from v0.08 directly to v0.19 ([issue](https://bitbucket.org/playruyi/support/issues/14))
+## 已知问题
+* 主机模式下语言设置无效
+* 无法直接从BIOS v0.08升级到v0.19 ([问题](https://bitbucket.org/playruyi/support/issues/14))
