--- a/docs/zh-cn/releaseNotes/0.8.1.2207.md
+++ b/docs/zh-cn/releaseNotes/0.8.1.2207.md
@@ -1,14 +1,15 @@
 # 0.8.1.2207 (2018.7.6)
 
-0.8.1.2207 is mainly a patch to 0.8.1.2001, to support vibration of Ruyi Controller, and a major bug fix that's may block the input integration for the upcoming China Joy.    
-In this release, we only contain Layer0 and SDKs, you can stick with 0.8.1.2001 of other Ruyi Apps(Main Client, Mini Power, etc.).    
-An warning may appear when you launch Ruyi Apps of 0.8.1.2001, it's safe to ignore it.   
-We planned a full release on 2018-7-13.
+0.8.1.2207主要作为0.8.1.2001的补丁发布,用来支持如意手柄的震动功能以及相关手柄输入的bug修正，以免影响即将到来的ChinaJoy展。
+
+本次发布仅包括Layer0和SDK，你仍可以使用上个版本（0.8.1.2001）的其他相关如意平台程序(主机客户端，迷你电源等等)。
+
+启动0.8.1.2001的如意程序时可能会出现警告，可以无视。   
 
 
-## New Features  
-1. Vibration support of Ruyi Controller added   
+## 新功能  
+1. 添加如意手柄的震动支持   
 
-## Bug Fixes
-1. Fixed a bug on input manager where the value of ThumbX was not within [ -32768, 32767 ]
+## Bug修正
+1. 修正手柄输入的遥感方向值ThumbX的映射范围不在[ -32768, 32767 ]内的问题
 
