--- a/docs/zh-cn/releaseNotes/0.6.2.807.md
+++ b/docs/zh-cn/releaseNotes/0.6.2.807.md
@@ -14,7 +14,7 @@
 ## 更新
 * 更新程序配置文件。 使用exePath来指定启动游戏的可运行文件(manifest -> application -> activity -> exePath). [如何打包](../tutorials/how_to_pack.md)
 * 主机客户端界面优化
-* 新的[如意系统镜像](http://dev.playruyi.com/uservices) and BIOS included ([instructions](../topics/bios.md))
+* 新的[如意系统镜像](http://dev.playruyi.com/uservices) 包括BIOS ([说明](../topics/bios.md))
 
 ## 已知问题
 * 虚幻4在部分环境下会编译失败，仍在查找原因
