--- a/docs/zh-cn/releaseNotes/0.7.2.1447.md
+++ b/docs/zh-cn/releaseNotes/0.7.2.1447.md
@@ -14,10 +14,10 @@
 * [BIOS v0.19](../topics/bios.md)
     - 优化启动时间，从18秒到10秒
     - 添加如意启动标志
-    - 实现网络回复功能
-    - 如果BIOS版本号为v0.08，则无法直接更新值0.19。需要先升级到0.13然后升级至0.19
+    - 实现网络恢复功能
+    - 如果BIOS版本号为v0.08，则无法直接更新至0.19。需要先升级到0.13然后升级至0.19
 * [如意系统 v0.10](../topics/os.md)
-    - 优化BIOS/驱动后由大约5%的性能提升(3Dmark)
+    - 优化BIOS/驱动后有大约5%的性能提升(3Dmark)
     - 支持对于引起系统警告操作时发出Win警告beep声的API
     - 改进了系统恢复过程
     - 在[PC模式]添加商标(../topics/pc_mode.md)，包括墙纸，IE浏览器主页等等。
@@ -37,7 +37,7 @@
 * CLI现在支持项目(请看`-p`和`--no-default-project`选项)
 * 每个界面操作会显示对应命令行语句
 * 部分输出日志内容可以双击查看更多信息
-    - TRC工具的output.xml
+    - TRC工具的output.xml日志
     - 每次界面操作的命令行语句
     - JSON解析/验证错误
 
