--- a/docs/zh-cn/releaseNotes/0.8.0.1717.md
+++ b/docs/zh-cn/releaseNotes/0.8.0.1717.md
@@ -3,7 +3,7 @@
 ## 新功能
 1. 如意助手; 系统托盘工具提供电量控制和硬件信息([仅PC模式](../topics/pc_mode.md))
 1. 添加MIT许可证到[sdk源码](https://bitbucket.org/playruyi/sdk_source)和[文档](https://bitbucket.org/playruyi/docs)仓库
-1. 开发者工具中添加__API插件__以协助c哈坎Thrift详细信息([详细](../topics/build_sdk_source.md#Thrift))
+1. 开发者工具中添加__API插件__以协助处理Thrift详细信息([详细](../topics/build_sdk_source.md#Thrift))
 
 
 ## 更新
