[doc] update release note

--- a/docs/en/releaseNotes/0.9.0.xxxx.md
+++ b/docs/en/releaseNotes/0.9.0.xxxx.md
@@ -6,58 +6,62 @@
 1. Update OS version to 1.02
 
 #### Ruyi Updater   
-1. Layer0 could update the updater now.  
-1. Adjust the update work flow, may ask the user to reboot to finish the upgrade
-
-#### Dev Portal
-1. Support email notification for developer forum
+1. Layer0 can update the Updater now. 
+1. Adjusted the update work flow where users will be asked to reboot the console to finish the upgrade when some files are occupied.
 
 #### Main Client
-1. Added mouse support in setting panel checkbox
-1. Added analog support when navigating in main client
-1. Added internet settings
-1. Added wifi settings
-1. Added controller settings
+1.	Added mouse support in setting panel checkbox.
+1.	Added analog stick support when navigating in main client.
+1.	Added internet configuration in Settings.
+1.	Added WiFi configuration in Settings.
+1.	Added controller configuration in Settings.
+1.	Optimized key hints at the bottom bar so it shows correct indications at different panels.
+
 
 #### Controller
-1. Add the ability to bind to user when a new controller plugged in and home key is pressed
-1. Re-sync the game controller whenever wireless changes
-1. Turn off Controller when entering LPM/Sleep/Shutdown the Console
-1. Wake up Console by controller under LPM
+1.	A new controller can now be bound to a user when plugged in or when the home key is pressed.
+1.	Controllers will be resynced when wireless connection changes.
+1.	Controllers will be turned off when the console enters low power mode, sleep mode, or gets shut down.
+1.	Console can be woken up by controller under low power mode.
 
 #### SDK & Demo
-1. Upgrade thrift version to 0.11, Unreal demo updated too
-1. update Unreal demo to include more sample code
-1. Removed /LTCG when building Cpp SDK, to avoid the P1,P2 version won't match when building in VS
-1. Update unity demo including match making with friends
+1. Thrift version updated to 0.11 with Unreal demo updated accordingly.
+1. Unreal demo updated to include more sample code
+1. Removed /LTCG when building C++ SDK, to avoid the P1, P2 version not matching when building in VS
+1. Unity demo updated to include matchmaking with friends
 
-## Bug Fixes
-1. [Main Client] Navigating through left column of setting menu doesn't have sound effect
-1. [Main Client] Keyboard focus is not on main client if use Enter to open it
-1. [Main Client] Fix Switch OS failed
-1. [Main Client] Fix that language setting doesn't read from system setting
-1. [Main Client] Fix the blur issue in main client
-1. [Main Client] Fix the messy code in Term of Service
-1. [Main Client] Fix that user can't back to Term of Service after browsing privacy policy
-1. [Main Client] Disable right mouse button in setting panel
-1. [Main Client] Fix that network submenu in setting will be blank if press B or ESC
-1. [Main Client] Fix that switch language failed in setting panel
-1. [Overlay] Overlay show black square in some situation
-1. [Overlay] Fix the overlay system menu crash
-1. [Overlay] Fix the screen capture function
-1. [Overlay] Fix the overlay lightish issue in specific games
-1. [Virtual Keyboard] Caps icon disappear if caps lock is on
-1. [Virtual Keyboard] Fix that user can't close VK by pressing B
-1. [Virtual Keyboard] Fix that !@#$%^&*() will be input twice if tap by keyboard
-1. [Virtual Keyboard] Fix that numbers can't be entered in Chinese 
-1. [Virtual Keyboard] Fix that caps lock status doesn't reflect on VK
-1. [Virtual Keyboard] Fix that Chinese can't be entered if caps lock is on
-1. [SDK] fix an crash when app quit without releasing the SDK instance in Cpp
-1. [Dev Portal] Fix that Markdown not working in forums
-1. [Ruyi Assist] Fix the switch to low power mode doesn't work
-1. [Layer0] Fix that Layer1 may crash when booting on new user
-1. [Layer0] Fix an NullReferenceException after switching to high power mode
-1. [Layer0] Fix that failed to download patch file if updater failed and needed to download again
-1. [Controller] Fix that SetRuyiControllerStatus will trigger windows alarm
-1. [Controller] Fix that in some situation the controller will be stuck at sending certain command
-1. [Controller] Fix that in some situation C# SDK can't receive Controller events
+
+#### Bug Fixes
+1. [Main Client] Fixed an issue where no sound effect was playing when navigating through the left column of Setting menu.
+1. [Main Client] Fixed an issue that keyboard focus was not on main client when pressing Enter to open it.
+1. [Main Client] Fixed an issue that LED on SUBOR Z+ failed to trigger when switching OS.
+1. [Main Client] Fixed the issue where language setting did not read from the system setting when opening Main Client for the first time.
+1. [Main Client] Fixed the blur display issue in main client.
+1. [Main Client] Fixed the messy code in Term of Service during the Account creation process.
+1. [Main Client] Fixed a minor issue where users were unable to go back to Term of Service after browsing privacy policy.
+1. [Main Client] The right mouse button in Settings panel has finally been disabled.
+1. [Main Client] Fixed the issue where the network sub-menu in Settings became blank if users pressed B or ESC.
+1. [Main Client] Fixed an issue that caused language switching to fail in the Settings panel.
+1. [Overlay] Fixed an issue that would lead the Overlay to show giant black square in some situation.
+1. [Overlay] Fixed a crashing bug in the Overlay system menu.
+1. [Overlay] Fixed an issue where users were unable to take screenshots.
+1. [Overlay] Fixed the Overlay display issue in certain games.
+1. [Virtual Keyboard] Fixed the issue that the Caps icon disappeared if Caps lock is turned on.
+1. [Virtual Keyboard] Fixed the issue where users were unable to close Virtual Keyboard by pressing B.
+1. [Virtual Keyboard] Fixed the issue where certain keys such as !@#$%^&*() would get double strokes when users typed using the keyboard.
+1. [Virtual Keyboard] Fixed the issue that numbers can't be input via Chinese input.
+1. [Virtual Keyboard] Fixed the issue that Caps lock status was not shown properly on Virtual Keyboard.
+1. [Virtual Keyboard] Fixed the issue that users could not input Chinese when Caps lock is turned on.
+1. [SDK] Fixed an issue that led to crashes when quitting an app without releasing the SDK instance in C++.
+1. [Dev Portal] Fixed the issue that Markdown is not working properly in Dev Forum.
+1. [Ruyi Assist] Fixed an issue that caused switching to low power mode (LPM) to fail.
+1. [Layer0] Fixed the issue that Layer1 might crash when booting for a new user.
+1. [Layer0] Fixed an NullReferenceException after switching to high power mode (HPM).
+1. [Layer0] Fixed an issue that caused the downloading of patch files to fail if the Updater failed and tried to download the patch again.
+1. [Controller] Fixed the issue that SetRuyiControllerStatus would trigger the Windows alarm.
+1. [Controller] Fixed an issue that controllers would get stuck at sending certain commands occasionally.
+1. [Controller] Fixed an issue that caused C# SDK to fail to receive Controller events.
+
+
+#### Known Issue
+1. Main Client gets stuck when trying to log out user account after switching from low power mode to high power mode.
