--- a/docs/releaseNotes/0.6.2.807.md
+++ b/docs/releaseNotes/0.6.2.807.md
@@ -1,21 +1,21 @@
 # 0.6.2.807 (2018.2.12)
 
-## New Features
-* Initial optimization tips and performance guidelines ([doc](../topics/optimization.md))
+## 新功能
+* 初始化优化提示和性能优化指南([相关文档](../topics/optimization.md))
 
-## Bug Fixes
-* Fixed the bug that devtool(layer0 debugger) failed to connect to a remote machine.
-* Fixed the bug that devtool(app runner) install failed when package size was too big.
-* Fixed the bug that devtool(app runner) install app failed if the package name and app id did not match.
-* Fixed the bug of failing to subscribe to layer0 when running on a remote machine.
-* Fixed the UI issues when launching apps from the console.
-* Disabled LTCG in C++ RuyiSDK.lib to fix linker error when building UE4 sample ([issue](https://bitbucket.org/playruyi/unreal_demo/issues/1))
+## Bug修正
+* 修正开发者工具(layer0调试器)无法连接到远程机器的问题
+* 修正开发者工具(app runner)当安装包过大时会安装失败的问题
+* 修正开发者工具(app runner)当安装包的名称和app id不匹配时安装失败的问题
+* 修正连接远程机器时无法向layer0订阅消息的问题
+* 修正从主机启动游戏时的界面问题
+* 修正虚幻4示例的编译问题，需要关闭RuyiSDK的C++编译LTCG标志([问题](https://bitbucket.org/playruyi/unreal_demo/issues/1))
 
-## Updates
-* Manifest file format updated. Use exePath to specify the executable file for the activity.(manifest -> application -> activity -> exePath). [HowToPack](../tutorials/how_to_pack.md)
-* Main client UI polish
-* New [Ruyi OS image](http://dev.playruyi.com/uservices) and BIOS included ([instructions](../topics/bios.md))
+## 更新
+* 更新程序配置文件。 使用exePath来指定启动游戏的可运行文件(manifest -> application -> activity -> exePath). [如何打包](../tutorials/how_to_pack.md)
+* 主机客户端界面优化
+* 新的[如意系统镜像](http://dev.playruyi.com/uservices) 包括BIOS ([说明](../topics/bios.md))
 
-## Known Issues
-* UE4 compiling may fail in certain circumstances, still looking into the problem and trying to fix.
-* Clicking direction keys may incur double moves for the cursor when typing with keyboard on the main client UI.  
+## 已知问题
+* 虚幻4在部分环境下会编译失败，仍在查找原因
+* 在主机客户端界面操作键盘，按下方向键一次可能会引起两次光标操作  
