--- a/docs/releaseNotes/0.8.0.1717.md
+++ b/docs/releaseNotes/0.8.0.1717.md
@@ -1,28 +1,28 @@
 # 0.8.0.1717 (2018.5.18)
 
-## New Features
-1. Ruyi Assist; system tray utility providing power control and hardware info ([PC mode](../topics/pc_mode.md) only)
-1. MIT license added to [sdk_source](https://bitbucket.org/playruyi/sdk_source) and [docs](https://bitbucket.org/playruyi/docs)
-1. __API Tool__ in devtools to assist processing Thrift message specifications ([details](../topics/build_sdk_source.md#Thrift))
+## 新功能
+1. 如意助手; 系统托盘工具提供电量控制和硬件信息([仅PC模式](../topics/pc_mode.md))
+1. 添加MIT许可证到[sdk源码](https://bitbucket.org/playruyi/sdk_source)和[文档](https://bitbucket.org/playruyi/docs)仓库
+1. 开发者工具中添加__API插件__以协助处理Thrift详细信息([详细](../topics/build_sdk_source.md#Thrift))
 
 
-## Updates
-1. __RuyiNet__ moved from `Ruyi` namespace to `Ruyi.SDK.Online`
-    * For example, [RuyiNetClient](https://bitbucket.org/playruyi/sdk_source/src/master/RuyiSDK/RuyiNet/RuyiNetClient.cs)
-1. Simplified steps to build c++ SDK ([details](https://bitbucket.org/playruyi/support/issues/15))
-1. Controller support for [Unity demo](https://bitbucket.org/playruyi/space_shooter)
-1. Tooltips for text fields in devtool
-1. RUYI OS recovery ([details](../topics/os_recovery.md))
+## 更新
+1. __RuyiNet__ 的命名空间从`Ruyi`改为`Ruyi.SDK.Online`
+    * 比如， [RuyiNetClient](https://bitbucket.org/playruyi/sdk_source/src/master/RuyiSDK/RuyiNet/RuyiNetClient.cs)
+1. 简化C++SDK编译步骤([详细](https://bitbucket.org/playruyi/support/issues/15))
+1. [Unity示例]支持Ruyi手柄(https://bitbucket.org/playruyi/space_shooter)
+1. 开发者工具中的输入框添加提示功能
+1. 如意系统恢复功能([details](../topics/os_recovery.md))
 
 
-## Bug Fixes
-1. Fixed the issue that CDN link expired after 30 minutes ([details](https://dev.playruyi.com/forum/topic/11/))
-1. Fixed an issue that caused integrity check fail during OS recovery   
-1. Fixed an issue that caused fail when trying to run an app from mainclient UI
-1. Fixed an issue that caused stuck when trying to relog in an user account after logging out
-1. Unable to detect USB 3.0 devices ([details](https://bitbucket.org/playruyi/support/issues/17))
+## Bug修正
+1. 修正CDN链接30分钟超时问题([详细](https://dev.playruyi.com/forum/topic/11/))
+1. 修正操作系统恢复时引起完整性检查失败的问题   
+1. 修正从主机客户端界面启动游戏失败的问题
+1. 修正用户登出后再次登陆时引起卡住的问题
+1. 修正无法检测USB3.0设备的问题([详细](https://bitbucket.org/playruyi/support/issues/17))
 
-## Known Issues
-1. Docs links broken on bitbucket ([details](https://bitbucket.org/playruyi/support/issues/16))
-1. Unable to use DX12 debug layer ([details](https://bitbucket.org/playruyi/support/issues/18))
-1. Layer0 will throw an error at start up
+## 已知问题
+1. bitbucket上文档链接损坏([详细](https://bitbucket.org/playruyi/support/issues/16))
+1. 无法使用DX12调试层([详细](https://bitbucket.org/playruyi/support/issues/18))
+1. Layer0启动时会抛出一个异常
