--- a/docs/releaseNotes/0.8.1.2001.md
+++ b/docs/releaseNotes/0.8.1.2001.md
@@ -1,33 +1,33 @@
 # 0.8.1.2001 (2018.6.15)
 
-## New Features  
-1. Patching manager implemented   
-1. Layer0 runs as a Windows service ([details](https://bitbucket.org/playruyi/docs/src/master/docs/en/topics/layer0.md))
-1. New InputManager API
-    - SDK demos updated: [UE4](https://bitbucket.org/playruyi/unreal_demo/commits/389ed16f85ff3015178cfbcae690ccce5e90dc72), [Unity](https://bitbucket.org/playruyi/space_shooter/commits/5707546806371d9b2bf4503a2bd9ceb5378cd550)
+## 新功能  
+1. 实现补丁更新管理   
+1. Layer0作为Windows服务运行([详细](https://bitbucket.org/playruyi/docs/src/master/docs/en/topics/layer0.md))
+1. 新的InputManager API
+    - SDK示例更新: [虚幻4](https://bitbucket.org/playruyi/unreal_demo/commits/389ed16f85ff3015178cfbcae690ccce5e90dc72), [Unity3d示例](https://bitbucket.org/playruyi/space_shooter/commits/5707546806371d9b2bf4503a2bd9ceb5378cd550)
 
 
-## Updates
-1. EULA added to registration process
+## 更新
+1. EULA添加到注册过程中
 
 
-## Bug Fixes
-1. Fixed issue where SDK instance was not released when quitting a game
-1. Fixed some typos in OS recovery instructions
-1. Fixed issue where controllers not detected if already connected before layer0 started
+## Bug修正
+1. 修正游戏退出时SDK实例没有释放的问题
+1. 修正操作系统恢复指南中部分笔误
+1. 修正手柄无法被检测到，如果在layer0启动之前就连接手柄的问题
 
-Main Client/Overlay/UI:
+主机客户端/游戏内界面/界面:
 
-1. Fixed an error when pressing button A repeatedly to launch an app
-1. Fixed issue where overlay client was shown at front right after its startup
-1. Fixed issue where audio volume setting in main client was not consistent with the system setting
-1. Fixed switch to low power mode in Ruyi Assist
+1. 修正重复按下按钮A会启动游戏的问题
+1. 修正游戏内界面启动后会立刻在前端显示的问题
+1. 修正系统音量设置和主机客户端设置中的音量设置不一致的问题
+1. 修正如意助手中切换到节能模式的开关
 
 
-## Known Issues
-1. Overlay can not be called in game (was disabled in this release)
-1. Ruyi Assist doesn't support Chinese
-1. "Switch OS" in main client not working
-    - Use bat file on desktop to switch OS (or [download](https://bitbucket.org/playruyi/support/raw/master/files/scripts/SwitchOS.cmd))
-1. Multiple service failures and main client non-responsive when returning to "high-power mode" ([details](https://bitbucket.org/playruyi/support/issues/20))
-1. Multiple service failures when create new Windows user ([details](https://bitbucket.org/playruyi/support/issues/21))
+## 已知问题
+1. 游戏内界面无法在游戏时呼出(在本次发布关闭该功能)
+1. 如意助手不支持中文
+1. 在主机客户端"切换系统（Switch OS）"无效
+    - 使用桌面的bat文件来切换系统(或者[下载](https://bitbucket.org/playruyi/support/raw/master/files/scripts/SwitchOS.cmd))
+1. 返回到“非节能模式”时多个服务失败，主机客户端无响应([详细](https://bitbucket.org/playruyi/support/issues/20))
+1. 新建Windows账户时多个服务失败([详细](https://bitbucket.org/playruyi/support/issues/21))
