[SDK] udpate release note

--- a/docs/releaseNotes/0.9.2.3270.md
+++ b/docs/releaseNotes/0.9.2.3270.md
@@ -45,4 +45,6 @@ As mentioned last week, we are migrating everyone over to using our server (Ext-
 
 
 ## KNOWN ISSUES
-1. [Setting] Developer mode in setting menu does not work yet
+1. [Setting] Developer mode in setting menu does not work yet, server switch still works
+1. [Setting] LED color setting not working in LPM mode
+1. [Setting] Change resolution might not work correctly under some circumstances
